--- a/client/src/components/course/courseContent/ContentAccordion.css
+++ b/client/src/components/course/courseContent/ContentAccordion.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 16px 24px;
+    cursor: pointer;
 }
 
 .accordion-icon {
