Update NavBar and OptionsButton
Co-authored-by: ShimaaBetah <shimaabetah1911@gmail.com>
Co-authored-by: Ahmed Nasser <ahmednasser217217@gmail.com>

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -10,6 +10,12 @@
     z-index: 3;
 }
 
+.buttons-list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .search-container {
     height: 45px;
     width: 400px;
