Add mail services for access requests
Co-authored-by: Ibrahim Abou Elenein <35760882+aboueleyes@users.noreply.github.com>
Co-authored-by: Elshimaa Betah <79271594+ShimaaBetah@users.noreply.github.com>

--- a/server/src/services/emails/templates/refundRequestRejection.html
+++ b/server/src/services/emails/templates/refundRequestRejection.html
@@ -1,4 +1,4 @@
 {{> header}}
-<p>Your Refund Request has been successfully Rejected</p>
+<p>Your Refund Request has been unfortunately Rejected</p>
 <p>Thanks, <br />Linear Depression team</p>
 {{> footer}}
